--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -18,6 +18,6 @@
 -->
 <resources>
     <bool name="def_accelerometer_rotation">true</bool>
-    <bool name="def_install_non_market_apps">true</bool>
+    <bool name="def_install_non_market_apps">false</bool>
     <bool name="def_screen_brightness_automatic_mode">true</bool>
 </resources>
